# banking-operations-widget

./: .env.example  .gitignore  README.MD  config.py  main.py  pyproject.toml
data/: transactions_excel.xlsx
src/: decorators.py  external_api.py  generators.py  import_csv_xlsx.py  masks.py  processing.py  transaction_filter.py  utils.py  widget.py
tests/: mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_import_csv_xlsx.py  test_masks_widget.py  test_processing.py  test_transaction_filter.py  test_utils.py
